--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+spring.datasource.url=jdbc:h2:mem:test
+spring.datasource.driverClassName=org.h2.Driver
+spring.h2.console.enabled=true
+spring.datasource.username=sa
+spring.datasource.password=sa
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
+### flyway settings
+# name of the schema history table
+spring.flyway.table=flyway_schema_history
+spring.flyway.location=classpath:/db/migration
+# each script runs within a single transaction. To run all pending scripts in a single transaction
+# uncomment the below property. the default value of this property is false
+# spring.flyway.group=true
